--- a/log_output/pyproject.toml
+++ b/log_output/pyproject.toml
@@ -2,7 +2,7 @@
 name = "devops-with-k8s"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["arttu@example.com"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
