--- a/pong_app/manifests/deployment.yaml
+++ b/pong_app/manifests/deployment.yaml
@@ -23,3 +23,10 @@ spec:
               value: "3030"
           ports:
             - containerPort: 3030
+          volumeMounts:
+            - name: logs-vol
+              mountPath: /app/logs
+      volumes:
+        - name: logs-vol
+          persistentVolumeClaim:
+            claimName: logoutput-pv-claim
