--- a/log_output/manifests/persistenvolumeclaim.yaml
+++ b/log_output/manifests/persistenvolumeclaim.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: logoutput-pv-claim
+  namespace: exercise-namespace
 spec:
   storageClassName: logoutput-pv-claim
   accessModes:
