--- a/log_output/manifests/service.yaml
+++ b/log_output/manifests/service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: log-output-svc
+  name: logoutput-reader-svc
+  namespace: exercise-namespace
 spec:
   type: ClusterIP
   selector:
-    app: log-output
+    app: logoutput-reader
   ports:
     - port: 2345
       protocol: TCP
