--- a/pong_app/pyproject.toml
+++ b/pong_app/pyproject.toml
@@ -12,7 +12,8 @@ uvicorn = "^0.32.1"
 asyncio = "^3.4.3"
 uuid = "^1.30"
 logging = "^0.4.9.6"
-
+SQLAlchemy = "2.0.37"
+psycopg2-binary = "^2.9.8"
 
 [build-system]
 requires = ["poetry-core"]
