--- a/project/app/manifests/deployment.yaml
+++ b/project/app/manifests/deployment.yaml
@@ -1,7 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: project
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-application
+  namespace: project
 spec:
   replicas: 1
   selector:
