--- a/project/app/manifests/ingress.yaml
+++ b/project/app/manifests/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: todo-application-ingress
+  namespace: project
 spec:
   rules:
   - http:
@@ -11,5 +12,12 @@ spec:
         backend:
           service:
             name: todo-application-svc
+            port:
+              number: 2345
+      - path: /todo
+        pathType: Prefix
+        backend:
+          service:
+            name: todo-backend-svc
             port:
               number: 2345
