--- a/project/backend/manifests/service.yaml
+++ b/project/backend/manifests/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ping-pong-svc
-  namespace: exercise-namespace
+  name: todo-backend-svc
+  namespace: project
 spec:
   type: ClusterIP
   selector:
-    app: ping-pong
+    app: todo-backend
   ports:
     - port: 2345
       protocol: TCP
-      targetPort: 3030
+      targetPort: 8000
