--- a/project/backend/pyproject.toml
+++ b/project/backend/pyproject.toml
@@ -13,6 +13,9 @@ asyncio = "^3.4.3"
 uuid = "^1.30"
 logging = "^0.4.9.6"
 requests = "^2.32.2"
+SQLAlchemy = "2.0.37"
+psycopg2-binary = "^2.9.8"
+pydantic = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
