--- a/pong_app/manifests/service.yaml
+++ b/pong_app/manifests/service.yaml
@@ -4,10 +4,10 @@ metadata:
   name: ping-pong-svc
   namespace: exercise-namespace
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: ping-pong
   ports:
-    - port: 2345
+    - port: 80
       protocol: TCP
       targetPort: 3030
