--- a/log_output/manifests/ingress.yaml
+++ b/log_output/manifests/ingress.yaml
@@ -7,13 +7,13 @@ spec:
   rules:
   - http:
       paths:
-      - path: /status
+      - path: /
         pathType: Prefix
         backend:
           service:
             name: logoutput-reader-svc
             port:
-              number: 2345
+              number: 80
   - http:
       paths:
       - path: /pingpong
@@ -22,4 +22,4 @@ spec:
           service:
             name: ping-pong-svc
             port:
-              number: 2345
+              number: 80
