--- a/pong_app/manifests/db-deployment.yaml
+++ b/pong_app/manifests/db-deployment.yaml
@@ -46,6 +46,7 @@ spec:
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
+              subPath: postgres
   volumeClaimTemplates:
     - metadata:
         name: postgres-data
