feat: github workflow

--- a/project/app/manifests/service.yaml
+++ b/project/app/manifests/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: todo-application-svc
   namespace: project
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: todo-application
   ports:
