--- a/project/app/manifests/deployment.yaml
+++ b/project/app/manifests/deployment.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: project
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -22,7 +17,7 @@ spec:
         - name: myregistrykey
       containers:
         - name: todo-application
-          image: arskale/todo-application:latest
+          image: APP_IMAGE
           imagePullPolicy: Always
           env:
             - name: UVICORN_PORT
