--- a/project/backend/manifests/postgres.yaml
+++ b/project/backend/manifests/postgres.yaml
@@ -46,6 +46,7 @@ spec:
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
+              subPath: postgres
   volumeClaimTemplates:
     - metadata:
         name: postgres-data
@@ -53,4 +54,4 @@ spec:
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
-            storage: 1Gi
+            storage: 100Mi
