--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,13 +23,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Auth
-      uses: google-github-actions/auth@v2
+    - uses: google-github-actions/auth@v2
       with:
-        credentials_json: '${{ secrets.GKE_SA_KEY }}'
+        credentials_json: "${{ secrets.GKE_SA_KEY }}"
 
-    - name: Set up Cloud SDK
+    - name: "Set up Cloud SDK"
       uses: google-github-actions/setup-gcloud@v2
+
+    - name: "Use gcloud CLI"
+      run: gcloud info
 
     - run: gcloud --quiet auth configure-docker
 
