--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,19 +47,19 @@ jobs:
         location: '${{ env.GKE_ZONE }}'
 
     - name: Build Backend Image
-      run: docker build -t "gcr.io/$PROJECT_ID/todo-backend:${{ github.sha }}" ./backend
+      run: docker build -t "gcr.io/$PROJECT_ID/backend:${{ github.sha }}" ./backend
 
     - name: Build Frontend Image
-      run: docker build -t "gcr.io/$PROJECT_ID/todo-app:${{ github.sha }}" ./app
+      run: docker build -t "gcr.io/$PROJECT_ID/app:${{ github.sha }}" ./app
     
     - name: Build Cronjob Image
       run: docker build -t "gcr.io/$PROJECT_ID/cronjob:${{ github.sha }}" ./todo_cronjob
 
     - name: Push Backend Image
-      run: docker push "gcr.io/$PROJECT_ID/todo-backend:${{ github.sha }}"
+      run: docker push "gcr.io/$PROJECT_ID/backend:${{ github.sha }}"
 
     - name: Push Frontend Image
-      run: docker push "gcr.io/$PROJECT_ID/todo-app:${{ github.sha }}"
+      run: docker push "gcr.io/$PROJECT_ID/app:${{ github.sha }}"
 
     - name: Push Cronjob Image
       run: docker push "gcr.io/$PROJECT_ID/cronjob:${{ github.sha }}"
@@ -78,9 +78,9 @@ jobs:
 
     - name: Deploy to GKE
       run: |-
-        kubectl create namespace project
-        kustomize edit set image BACKEND_IMAGE=gcr.io/$PROJECT_ID/todo-backend:${{ github.sha }}
-        kustomize edit set image APP_IMAGE=gcr.io/$PROJECT_ID/todo-app:${{ github.sha }}
+        kustomize edit set namespace project
+        kustomize edit set image BACKEND_IMAGE=gcr.io/$PROJECT_ID/backend:${{ github.sha }}
+        kustomize edit set image APP_IMAGE=gcr.io/$PROJECT_ID/app:${{ github.sha }}
         kustomize edit set image CRONJOB=gcr.io/$PROJECT_ID/cronjob:${{ github.sha }}
 
         kustomize build . | kubectl apply -f -
