fiX: install sops ci

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,6 +66,11 @@ jobs:
 
     - name: Set up Kustomize
       uses: imranismail/setup-kustomize@v2.1.0
+    - name: Install sops
+      run: |
+        wget https://github.com/mozilla/sops/releases/latest/download/sops-$(uname -s)-$(uname -m)
+        chmod +x sops-$(uname -s)-$(uname -m)
+        sudo mv sops-$(uname -s)-$(uname -m) /usr/local/bin/sops
 
     - name: Decrypt secrets with SOPS
       env:
