--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,16 +66,14 @@ jobs:
 
     - name: Set up Kustomize
       uses: imranismail/setup-kustomize@v2.1.0
-    - name: Setup sops
-      uses: sops-tools/setup-sops-action@v1
-    - name: Verify sops installation
-      run: |
-        sops --version
-        
+      
     - name: Decrypt secrets with SOPS
       env:
         SOPS_AGE_KEY_FILE_CONTENT: ${{ secrets.SOPS_SECRET }}
       run: |
+        curl -O -L -C - https://github.com/mozilla/sops/releases/download/v3.7.3/sops-v3.7.3.linux
+        sudo mv sops-v3.7.3.linux /usr/bin/sops
+        sudo chmod +x /usr/bin/sops
         echo "$SOPS_AGE_KEY_FILE_CONTENT" > key.txt
         export SOPS_AGE_KEY_FILE=$(pwd)/key.txt
         sops --decrypt backend/manifests/secret.enc.yaml | kubectl apply -f -
