--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Set up Kustomize
       uses: imranismail/setup-kustomize@v2.1.0
-      
+
     - name: Decrypt secrets with SOPS
       env:
         SOPS_AGE_KEY_FILE_CONTENT: ${{ secrets.SOPS_SECRET }}
@@ -76,6 +76,7 @@ jobs:
         sudo chmod +x /usr/bin/sops
         echo "$SOPS_AGE_KEY_FILE_CONTENT" > key.txt
         export SOPS_AGE_KEY_FILE=$(pwd)/key.txt
+        kubectl create namespace project
         sops --decrypt backend/manifests/secret.enc.yaml | kubectl apply -f -
         rm -f key.txt
 
