--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,22 +47,22 @@ jobs:
         location: '${{ env.GKE_ZONE }}'
 
     - name: Build Backend Image
-      run: docker build -t "gcr.io/$PROJECT_ID/backend:${{ github.sha }}" ./backend
+      run: docker build -t "gcr.io/$PROJECT_ID/todo-backend:${{ github.sha }}" ./backend
 
     - name: Build Frontend Image
-      run: docker build -t "gcr.io/$PROJECT_ID/app:${{ github.sha }}" ./app
+      run: docker build -t "gcr.io/$PROJECT_ID/todo-application:${{ github.sha }}" ./app
     
     - name: Build Cronjob Image
-      run: docker build -t "gcr.io/$PROJECT_ID/cronjob:${{ github.sha }}" ./todo_cronjob
+      run: docker build -t "gcr.io/$PROJECT_ID/todo-cron:${{ github.sha }}" ./todo_cronjob
 
     - name: Push Backend Image
-      run: docker push "gcr.io/$PROJECT_ID/backend:${{ github.sha }}"
+      run: docker push "gcr.io/$PROJECT_ID/todo-backend:${{ github.sha }}"
 
     - name: Push Frontend Image
-      run: docker push "gcr.io/$PROJECT_ID/app:${{ github.sha }}"
+      run: docker push "gcr.io/$PROJECT_ID/todo-application:${{ github.sha }}"
 
     - name: Push Cronjob Image
-      run: docker push "gcr.io/$PROJECT_ID/cronjob:${{ github.sha }}"
+      run: docker push "gcr.io/$PROJECT_ID/todo-cron:${{ github.sha }}"
 
     - name: Set up Kustomize
       uses: imranismail/setup-kustomize@v2.1.0
@@ -83,9 +83,9 @@ jobs:
     - name: Deploy to GKE
       run: |-
         kustomize edit set namespace project
-        kustomize edit set image BACKEND_IMAGE=gcr.io/$PROJECT_ID/backend:${{ github.sha }}
-        kustomize edit set image APP_IMAGE=gcr.io/$PROJECT_ID/app:${{ github.sha }}
-        kustomize edit set image CRONJOB=gcr.io/$PROJECT_ID/cronjob:${{ github.sha }}
+        kustomize edit set image BACKEND_IMAGE=gcr.io/$PROJECT_ID/todo-backend:${{ github.sha }}
+        kustomize edit set image APP_IMAGE=gcr.io/$PROJECT_ID/todo-application:${{ github.sha }}
+        kustomize edit set image CRONJOB=gcr.io/$PROJECT_ID/todo-cron:${{ github.sha }}
 
         kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/todo-backend
