--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,22 +45,22 @@ jobs:
         location: '${{ env.GKE_ZONE }}'
 
     - name: Build Backend Image
-      run: docker build -t "gcr.io/$PROJECT_ID/todo-backend:${{ github.sha }}" ./backend
+      run: docker build -t "gcr.io/$PROJECT_ID/todo-backend:$BRANCH-$GITHUB_SHA" ./backend
 
     - name: Build Frontend Image
-      run: docker build -t "gcr.io/$PROJECT_ID/todo-application:${{ github.sha }}" ./app
+      run: docker build -t "gcr.io/$PROJECT_ID/todo-application:$BRANCH-$GITHUB_SHA" ./app
     
     - name: Build Cronjob Image
-      run: docker build -t "gcr.io/$PROJECT_ID/todo-cron:${{ github.sha }}" ./todo_cronjob
+      run: docker build -t "gcr.io/$PROJECT_ID/todo-cron:$BRANCH-$GITHUB_SHA" ./todo_cronjob
 
     - name: Push Backend Image
-      run: docker push "gcr.io/$PROJECT_ID/todo-backend:${{ github.sha }}"
+      run: docker push "gcr.io/$PROJECT_ID/todo-backend:$BRANCH-$GITHUB_SHA"
 
     - name: Push Frontend Image
-      run: docker push "gcr.io/$PROJECT_ID/todo-application:${{ github.sha }}"
+      run: docker push "gcr.io/$PROJECT_ID/todo-application:$BRANCH-$GITHUB_SHA"
 
     - name: Push Cronjob Image
-      run: docker push "gcr.io/$PROJECT_ID/todo-cron:${{ github.sha }}"
+      run: docker push "gcr.io/$PROJECT_ID/todo-cron:$BRANCH-$GITHUB_SHA"
 
     - name: Set up Kustomize
       uses: imranismail/setup-kustomize@v2.1.0
@@ -79,10 +79,19 @@ jobs:
 
     - name: Deploy to GKE
       run: |-
-        kustomize edit set namespace default
-        kustomize edit set image BACKEND_IMAGE=gcr.io/$PROJECT_ID/todo-backend:${{ github.sha }}
-        kustomize edit set image APP_IMAGE=gcr.io/$PROJECT_ID/todo-application:${{ github.sha }}
-        kustomize edit set image CRONJOB=gcr.io/$PROJECT_ID/todo-cron:${{ github.sha }}
+        BRANCH_NAME="${GITHUB_REF##*/}"
+        
+        if [ "$BRANCH_NAME" == "main" ]; then
+          NAMESPACE="default"
+        else
+          NAMESPACE="$BRANCH_NAME"
+        fi
+
+        kubectl create namespace $NAMESPACE || echo "Namespace already exists"
+        kustomize edit set namespace $NAMESPACE
+        kustomize edit set image BACKEND_IMAGE=gcr.io/$PROJECT_ID/todo-backend:$BRANCH-$GITHUB_SHA
+        kustomize edit set image APP_IMAGE=gcr.io/$PROJECT_ID/todo-application:$BRANCH-$GITHUB_SHA
+        kustomize edit set image CRONJOB=gcr.io/$PROJECT_ID/todo-cron:$BRANCH-$GITHUB_SHA
 
         kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/todo-backend
