--- a/project/app/manifests/deployment.yaml
+++ b/project/app/manifests/deployment.yaml
@@ -29,3 +29,5 @@ spec:
         - name: storage-vol
           persistentVolumeClaim:
             claimName: todo-pv-claim
+      strategy:
+        type: Recreate
