feat: 3.08-3.09; Set sensible resource limits based on observations

--- a/log_output/manifests/deployment.yaml
+++ b/log_output/manifests/deployment.yaml
@@ -35,6 +35,13 @@ spec:
         - name: logoutput-writer
           image: arskale/log-writer:latest
           imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "300Mi"
+              cpu: "100m"
+            limits:
+              memory: "300Mi"
+              cpu: "100m"
           volumeMounts:
             - name: logs-vol
               mountPath: /app/logs
