--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,7 +94,7 @@ jobs:
         fi
 
         kubectl create namespace $NAMESPACE || echo "Namespace already exists"
-        kustomize edit set namespace $NAMESPACE
+        kustomize edit set namespace $NAMESPACE || echo "already correct namespace"
         kustomize edit set image BACKEND_IMAGE=gcr.io/$PROJECT_ID/todo-backend:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
         kustomize edit set image APP_IMAGE=gcr.io/$PROJECT_ID/todo-application:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
         kustomize edit set image CRONJOB=gcr.io/$PROJECT_ID/todo-cron:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
