--- a/project/backend/manifests/db_backup.yaml
+++ b/project/backend/manifests/db_backup.yaml
@@ -18,7 +18,7 @@ spec:
             - name: gcp-key
               mountPath: /secret
               readOnly: true
-            command: ["/bin/bash", "-c", "/usr/src/app/backup-script.sh"]
+            command: ["/bin/bash", "-c", "/usr/src/app/backup_db.sh"]
           restartPolicy: OnFailure
           volumes:
           - name: gcp-key
