--- a/project/backend/manifests/deployment.yaml
+++ b/project/backend/manifests/deployment.yaml
@@ -29,5 +29,27 @@ spec:
           env:
             - name: UVICORN_PORT
               value: "8000"
+            - name: POSTGRES_HOST
+              value: exercise-db-svc
+            - name: POSTGRES_PORT
+              value: 5432
+            - name: POSTGRES_USER
+              value: postgres
+            - name: POSTGRES_DB
+              value: todoapp
+          readinessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - >
+                  PGPASSWORD=$POSTGRES_PASSWORD pg_isready
+                  -h $POSTGRES_HOST
+                  -p $POSTGRES_PORT
+                  -U $POSTGRES_USER
+                  -d $POSTGRES_DB
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            failureThreshold: 3
           ports:
             - containerPort: 8000
