--- a/project/backend/manifests/deployment.yaml
+++ b/project/backend/manifests/deployment.yaml
@@ -32,7 +32,7 @@ spec:
             - name: POSTGRES_HOST
               value: exercise-db-svc
             - name: POSTGRES_PORT
-              value: 5432
+              value: "5432"
             - name: POSTGRES_USER
               value: postgres
             - name: POSTGRES_DB
